--- a/src/common/defines.h.in
+++ b/src/common/defines.h.in
@@ -48,6 +48,7 @@
 #define GETTABLETYPELIST 34
 #define GETPRIMARYKEYLIST 35
 #define GETKEYANDINDEXLIST 36
+#define GET_CURRENT_SCHEMA 37
 
 #define SUSPENDED_RESULT_SET 1
 #define NO_SUSPENDED_RESULT_SET 0
