*** empty log message ***

--- a/config.mk.in
+++ b/config.mk.in
@@ -364,7 +364,7 @@ endif
 # node.js
 HAVE_NODEJS = @HAVE_NODEJS@
 NODE = @NODE@
-NODEGYP = @NODEGYP@
+NODEGYP = @NODE@ @NODEGYP@
 NODEMODULEDIR = @NODEMODULEDIR@
 NODEJSCFLAGS = @NODEJSCXXFLAGS@ -I@TOP_BUILDDIR_ABS@/src/api/c++ $(RUDIMENTSINCLUDES)
 NODEJSLIBS = -L@TOP_BUILDDIR_ABS@/src/api/c++/.libs -l$(SQLR)client $(RUDIMENTSLIBS)
