*.ii files are removed now

--- a/src/api/c/Makefile
+++ b/src/api/c/Makefile
@@ -16,7 +16,7 @@ LOBJS = sqlrclientwrapper.$(OBJ)
 all: lib$(SQLR)clientwrapper.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest
+	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 lib$(SQLR)clientwrapper.$(LIBEXT): $(SRCS) $(LOBJS)
