--- a/src/connections/Makefile
+++ b/src/connections/Makefile
@@ -31,7 +31,7 @@ all-sqlite: $(SQLR)connection_sqlite.$(LIBEXT)
 all-sap: $(SQLR)connection_sap.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest
+	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 
