--- a/src/parsers/Makefile
+++ b/src/parsers/Makefile
@@ -13,7 +13,7 @@ include ../../config.mk
 all: $(SQLR)parser_default.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest
+	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 $(SQLR)parser_default.$(LIBEXT): default.cpp default.$(OBJ)
