--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -24,7 +24,7 @@ LOBJS = sqlrcmdline.$(OBJ) \
 all: $(STATICUTILPLUGINSRCS) lib$(SQLR)util.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest $(STATICUTILPLUGINSRCS)
+	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii $(STATICUTILPLUGINSRCS)
 	$(RMTREE) .libs
 
 lib$(SQLR)util.$(LIBEXT): $(SRCS) $(LOBJS)
