--- a/init/sqlrelay.service.in
+++ b/init/sqlrelay.service.in
@@ -6,6 +6,7 @@ After=network.target
 Environment=LD_LIBRARY_PATH=@libdir@
 ExecStart=@bindir@/sqlr-start
 Type=forking
+KillSignal=SIGINT
 
 [Install]
 WantedBy=multi-user.target
