--- a/src/configs/Makefile
+++ b/src/configs/Makefile
@@ -13,7 +13,7 @@ include ../../config.mk
 all: $(SQLR)config_xmldom.$(LIBEXT)
 
 clean:
-	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest
+	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
 	$(RMTREE) .libs
 
 $(SQLR)config_xmldom.$(LIBEXT): xmldom.cpp xmldom.$(OBJ)
