--- a/src/common/defines.h.in
+++ b/src/common/defines.h.in
@@ -49,6 +49,7 @@
 #define GETPRIMARYKEYLIST 35
 #define GETKEYANDINDEXLIST 36
 #define GET_CURRENT_SCHEMA 37
+#define NEXT_RESULT_SET 38
 
 #define SUSPENDED_RESULT_SET 1
 #define NO_SUSPENDED_RESULT_SET 0
