--- a/src/server/sqlrelay/private/sqlrshm.h.in
+++ b/src/server/sqlrelay/private/sqlrshm.h.in
@@ -66,7 +66,9 @@ struct sqlrconnstatistics {
 	uint32_t			ngetquerytree;
 	uint64_t			nsql;
 	uint32_t			ncustomsql;
-	uint32_t			nrelogin;
+        uint32_t			nrelogin;
+        uint32_t			nnextresultset;
+        uint32_t 			nnextresultsettrue;
 	uint64_t			loggedinsec;
 	uint64_t			loggedinusec;
 	uint64_t			statestartsec;
