--- a/src/translations/Makefile
+++ b/src/translations/Makefile
@@ -10,7 +10,8 @@ include ../../config.mk
 .cpp.obj:
 	$(LTCOMPILE) $(CXX) $(CXXFLAGS) $(WERROR) $(PLUGINCPPFLAGS) $(COMPILE) $<
 
-all: $(SQLR)translation_normalize.$(LIBEXT)
+all: $(SQLR)translation_normalize.$(LIBEXT) \
+	$(SQLR)translation_patterns.$(LIBEXT) \
 
 clean:
 	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest *.ii
@@ -19,11 +20,15 @@ clean:
 $(SQLR)translation_normalize.$(LIBEXT): normalize.cpp normalize.$(OBJ)
 	$(LTLINK) $(LINK) $(OUT)$@ normalize.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
 
+$(SQLR)translation_patterns.$(LIBEXT): patterns.cpp patterns.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ patterns.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
 install: $(INSTALLLIB)
 
 installdll:
 	$(MKINSTALLDIRS) $(libexecdir)
 	$(LTINSTALL) $(CP) $(SQLR)translation_normalize.$(LIBEXT) $(libexecdir)
+	$(LTINSTALL) $(CP) $(SQLR)translation_patterns$(LIBEXT) $(libexecdir)
 
 installlib: $(INSTALLSHAREDLIB)
 
@@ -33,7 +38,12 @@ installsharedlib:
 	$(RM) $(libexecdir)/$(SQLR)translation_normalize.a
 	$(RM) $(libexecdir)/$(SQLR)translation_normalize.$(LIBEXT)
 	$(MODULERENAME) $(libexecdir)/$(SQLR)translation_normalize.so so $(MODULESUFFIX)
+	$(LTINSTALL) $(CP) $(SQLR)translation_patterns.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/$(SQLR)translation_patterns.a
+	$(RM) $(libexecdir)/$(SQLR)translation_patterns.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/$(SQLR)translation_patterns.so so $(MODULESUFFIX)
 
 uninstall:
 	$(RM) $(libexecdir)/$(SQLR)translation_normalize.* \
+		$(libexecdir)/$(SQLR)translation_patterns.* \
 		$(libexecdir)/sqlrtranslation_normalize.*
