added tls/ssl backend docs

--- a/doc/enterpriseadmin.wt.in
+++ b/doc/enterpriseadmin.wt.in
@@ -1,7 +1,7 @@
-==== Administering Enterprise Modules ====
+==== Administering SQL Relay Enterprise Modules ====
 
 {{{#!blockquote
-[../sqlrenterprise/modules/install_modules.html Installing the SQL Relay Enterprise Modules][[br]]
+[../sqlrenterprise/modules/install_mysql_frontend.html Installing the MySQL Front-End Modules][[br]]
 [../sqlrenterprise/modules/license_mysql_frontend.html Licensing the MySQL Front-End Modules][[br]]
 [../sqlrenterprise/modules/configure_mysql_frontend.html Configuring the MySQL Front-End Modules][[br]]
 }}}
