sqlr.jar -> sqlrelayjdbc.jar

--- a/doc/howtos/Makefile
+++ b/doc/howtos/Makefile
@@ -4,9 +4,12 @@ include ../../config.mk
 
 .SUFFIXES: .wt .html
 
-SRCS = sqlrserver-oracle12c-ubuntu1604.wt
+SRCS = sqlrserver-oracle12c-ubuntu1604.wt \
+	sqlrclient-oracle12c-ubuntu1604.wt
 
-OBJS = sqlrserver-oracle12c-ubuntu1604.html
+OBJS = sqlrserver-oracle12c-ubuntu1604.html \
+	sqlrclient-oracle12c-ubuntu1604.html
+
 
 .wt.html:
 	wt -i $< -o $@
