added new tutorial, updated old ones

--- a/doc/howtos/Makefile
+++ b/doc/howtos/Makefile
@@ -5,10 +5,12 @@ include ../../config.mk
 .SUFFIXES: .wt .html
 
 SRCS = sqlrserver-oracle12c-ubuntu1604.wt \
-	sqlrclient-oracle12c-ubuntu1604.wt
+	sqlrclient-ubuntu1604.wt \
+	sqlrserver-tls-pfx-sqlserver-windows.wt
 
 OBJS = sqlrserver-oracle12c-ubuntu1604.html \
-	sqlrclient-oracle12c-ubuntu1604.html
+	sqlrclient-ubuntu1604.html \
+	sqlrserver-tls-pfx-sqlserver-windows.html
 
 
 .wt.html:
