added some new docs

--- a/doc/howtos/Makefile
+++ b/doc/howtos/Makefile
@@ -4,13 +4,29 @@ include ../../config.mk
 
 .SUFFIXES: .wt .html
 
-SRCS = sqlrserver-oracle12c-ubuntu1604.wt \
+SRCS = \
+	oracle-tls.wt \
+	oracle-tls-wallet-quirks.wt \
+	oracle-tls-selfsigned.wt \
+	oracle-tls-casigned.wt \
+	sqlrserver-oracle12c-ubuntu1604.wt \
 	sqlrclient-ubuntu1604.wt \
-	sqlrserver-tls-pfx-sqlserver-windows.wt
+	sqlrserver-tls-pfx-sqlserver-windows.wt \
+	tls.wt \
+	tls-encryption.wt \
+	tls-certificate.wt
 
-OBJS = sqlrserver-oracle12c-ubuntu1604.html \
+OBJS = \
+	oracle-tls.html \
+	oracle-tls-wallet-quirks.html \
+	oracle-tls-selfsigned.html \
+	oracle-tls-casigned.html \
+	sqlrserver-oracle12c-ubuntu1604.html \
 	sqlrclient-ubuntu1604.html \
-	sqlrserver-tls-pfx-sqlserver-windows.html
+	sqlrserver-tls-pfx-sqlserver-windows.html \
+	tls.html \
+	tls-encryption.html \
+	tls-certificate.html
 
 
 .wt.html:
