fixed --disable-server bug that caused odbc api to be disabled

--- a/config.mk.in
+++ b/config.mk.in
@@ -764,10 +764,12 @@ ifneq ($(strip $(MYSQLLIBS)),)
 CONNECTIONSALLTARGETS += all-mysql
 CONNECTIONSINSTALLTARGETS += installsharedlib-mysql
 endif
+ifneq ($(strip $(ENABLE_ODBC)),)
 ifneq ($(strip $(ODBCLIBS)),)
 ifneq ($(strip $(ODBCUNICODE)),)
 CONNECTIONSALLTARGETS += all-odbc
 CONNECTIONSINSTALLTARGETS += installsharedlib-odbc
+endif
 endif
 endif
 ifeq ($(strip $(ENABLE_ORACLE)),yes)
