fixed odbc-connection-build bug

--- a/config.mk.in
+++ b/config.mk.in
@@ -484,6 +484,7 @@ endif
 
 
 # odbc
+ENABLE_ODBC = @ENABLE_ODBC@
 ENABLE_ODBC_DRIVER = @ENABLE_ODBC_DRIVER@
 ODBCINCLUDES = @ODBCINCLUDES@
 ODBCLIBS = @ODBCLIBS@
